--- a/css/style.css
+++ b/css/style.css
@@ -1,97 +1,80 @@
-body{
-	background-image:url(../images/bg.jpg);
-	background-repeat:no-repeat;
-	background-size:cover;
-	height: 100%;
+body {
+  background-image: url(../images/bg.jpg);
+  margin: auto;
+  width: 60%;
 }
 
-h1{
-	color: #FFFFFF; 
-	font-size: 48px;
-	font-weight: bold;
-	text-align: center;
-	font-family: Comic Sans MS;
-	line-height:400%;
+.form {
+  background-color: #450063;
+  height: auto;
+  width: 632px;
+  margin: auto;
 }
 
-.form{
-	width: 70%;
-    background: #FFFFFF;
-    border-radius: 10px;
-    overflow: hidden;
-	margin-left: 15%;
-	margin-right: 15%;
+.banner {
+  background-image: url(../images/banner.png);
+  background-position: -225px -244px;
+  position: relative;
+  left: 0px;
+  top: 0px;
 }
 
-.contact{
-	font-family: Palatino Linotype;
-	font-size: 24px;
-	font-weight: bold;
-	margin-left: 15%
+h1 {
+  color: #FFFFFF;
+  font-family: Roboto Mono;
+  height: 106px;
+  width: 267px;
+  background-position: -93px -295px;
+  position: relative;
+  left: 173px;
+  top: 35px;
 }
 
-input[type="text"],input[type="email"],input[type="tel"]
-{
-    font-family: cursive;
-	font-size: 16px;
-	margin-left: 15%;
-	line-height: 1.5;
-	padding: 5px;
-	width: 70%;
-	border: none;
-	border-bottom: 1px solid;
+div {
+  padding: 6px;
+  margin: auto;
+  position: relative;
+  left: 3px;
+  top: -4px;
+  text-align: center;
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
+  -khtml-border-radius: 0;
+  border-radius: 0;
 }
 
-.select-menu{
-	font-family: cursive;
-	font-size: 16px;
-	width:70px;
-	margin-left: 15%;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	border: none;
-	border-bottom: 1px solid;
+.label {
+  position: relative;
+  left: 1px;
+  top: 8px;
+  font-family: Courier New;
+  color: #FFFFFF;
 }
 
-.notice{
-	font-family: Helvetica;
-	font-size: 12px;
-	text-align: center;
-	padding: 5%;
+input:focus {
+  background-color: #BEBED2;
+  border: 1px solid black;
 }
 
-#suburb{
-	width: 15%
+input {
+  height: 25px;
+  width: 250px;
+  box-shadow: -2px 3px 0 #444355;
+  border-radius: 2px;
 }
 
-#birthyear, #pcode{
-	width: 10%;
-	margin-right: 15%
+select {
+  height: 40px;
+  width: 257px;
+  box-shadow: -2px 3px 0 #444355;
+  border-radius: 4px;
 }
 
-.myButton {
-	background-color: #3ab25a;
-	text-align: center;
-	border-radius: 28px;
-	border: 1px solid #18ab29;
-	display: inline-block;
-	cursor: pointer;
-	color: #ffffff;
-	font-family: Comic Sans MS;
-	font-weight: bold;
-	font-size: 22px;
-	padding: 16px 31px;
-	text-decoration: none;
-	text-shadow: 0px 1px 0px #2f6627;
-	margin-left: 15%;
-	margin-right: 15%;
-	margin-top:5%;
-	margin-bottom:0;
-}
-.myButton:hover {
-	background-color: #5cbf2a;
-}
-.myButton:active {
-	position: relative;
-	top: 1px;
+.Register {
+  height: 48px;
+  width: 124px;
+  font-family: Courier New;
+  position: relative;
+  left: 253px;
+  top: -4px;
 }
